made three pages and linked them togehter, as requested

--- a/page3.html
+++ b/page3.html
@@ -11,9 +11,9 @@
     <title>Document</title>
 </head>
 <header>
-    <a class="active" href="index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="page2.html">Page2</a>
-    <a href="page3.html">Page3</a>
+    <a class="active" href="page3.html">Page3</a>
 </header>
 <body>
     
