--- a/page2.html
+++ b/page2.html
@@ -11,8 +11,8 @@
     <title>Document</title>
 </head>
 <header>
-    <a class="active" href="index.html">Home</a>
-    <a href="page2.html">Page2</a>
+    <a href="index.html">Home</a>
+    <a class="active" href="page2.html">Page2</a>
     <a href="page3.html">Page3</a>
 </header>
 <body>
