added a paragraph and loging on the home page

--- a/game.html
+++ b/game.html
@@ -11,11 +11,17 @@
     <title>Document</title>
 </head>
 <header>
-    <a href="index.html">Home</a>
-    <a class="active" href="page2.html">Page2</a>
-    <a href="page3.html">Page3</a>
+    <div class="header">
+        <a href="index.html" class="logo"><h2>Gang of Eight Presents</h2></a><br>
+        <div class="nav">
+            <a href="index.html">Home</a>
+            <a class="active" href="game.html">Game</a>
+            <a href="page3.html">Page3</a>
+        </div>
+    </div>
 </header>
 <body>
+
     
 </body>
 </html>
