--- a/page3.html
+++ b/page3.html
@@ -11,9 +11,14 @@
     <title>Document</title>
 </head>
 <header>
-    <a href="index.html">Home</a>
-    <a href="page2.html">Page2</a>
-    <a class="active" href="page3.html">Page3</a>
+    <div class="header">
+        <a href="index.html" class="logo"><h2>Gang of Eight Presents</h2></a>
+        <div class="nav">
+            <a href="index.html">Home</a>
+            <a href="game.html">Game</a>
+            <a class="active" href="page3.html">Page3</a>
+        </div>
+    </div>
 </header>
 <body>
     
