--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,37 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <style>
-      th{
-        color: #fff;
-      }
-    </style>
-    <title>Leaderboard</title>
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
+
+  <!--  Styling to be moved into the CSS file -->
+  <style>
+    th {
+      color: #fff;
+    }
+  </style>
+  <title>Leaderboard</title>
 </head>
+
 <body>
-    
-
-    <h2>TEST FORM</h2>
 
 
-  <label for="name">Players Name:</label><br>
-  <input type="text" id="name" name="name" value=""><br>
-  <label for="time">Time:</label><br>
-  <input type="number" id="time" step="0.01" name="time" value=""><br><br>
-  <label for="score">Score:</label><br>
-  <input type="number" id="score" name="score" value=""><br><br>
-  <button id="btn" data-type="submit" class="btn btn-info">Submit</button>
-
+  <!--  TABLE TO DISPLAY THE LEADERBOARD -->
   <table class="table table-striped">
     <tr class="bg-info">
       <th>Name</th>
-      <th>Time Allowance</th>
+      <th>Difficulty</th>
       <th>Score</th>
     </tr>
 
@@ -41,9 +36,7 @@
   </table>
 
 
-
-
-<!--  This is only a temporary form while I build how we save results to JSON -->
-<script src="assets/js/script.js"></script>
+  <script src="assets/js/leaderboard.js"></script>
 </body>
+
 </html>
