Added nav menu to leaderboard page

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -19,6 +19,34 @@
   <title>Leaderboard</title>
 </head>
 
+<header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+      <a class="navbar-brand" href="index.html">PROJECT NAME</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarScroll">
+          <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll">
+              <li class="nav-item">
+                  <a class="nav-link active" href="index.html">home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="leaderboard.html">Leader board</a>
+              </li>
+          </ul>
+      </div>
+  </nav>
+
+  <!-- <div class="header">
+      <a href="index.html" class="logo"><h2>Gang of Eight Presents</h2></a>
+      <div class="nav">
+          <a class="active" href="index.html">Home</a>
+          <a href="game.html">Game</a>
+          <a href="page3.html">Page3</a>
+      </div>
+  </div> -->
+</header>
+
 <body>
 
 
