Add octocat image to win modal

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/game.css">
     <title>Document</title>
 </head>
+
 <body>
     <!-- Header / Navigation bar -->
     <header>
@@ -159,6 +160,7 @@
         <div class="congrats">
             <h3>congratulations!!!</h3>
         </div>
+        <img class="modal-octocat" src="assets/images/octocat.png" alt="Octocat">
         <div class="modal-content">
             <p>you have found all the cards!, Would you like to play again?</p>
         </div>
