--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <!-- Header / Navigation bar -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-            <a class="navbar-brand" href="index.html">PROJECT NAME</a>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="index.html">World Emoji Day</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -39,20 +39,19 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center">
                 <h2 class="game-header">Gang of Eight Presents</h2>
+                <h1> Emoji Match</h1>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center">
                 <div class="instructions">
-                    <h4 class="instructions-header">how to play!</h4>
-                    <p>Choose two cards and if the emojis underneath match, you will receive a point.
-                        <br>There are a total of 8 available on easy level, 10 points on medium level and 12 points on
-                        hard level.
-                        <br>Completing the board is the quickest time will earn extra points and if you are fast enough,
-                        a place on
-                        illustrious leader board.
-                        <br>The timer will begin once you flip your first card.
-                        <br>Good Luck!</p>
+                    <h4 class="instructions-header">how to play</h4>
+                    <p>
+                        Choose two cards and if the emojis underneath match, you will receive a point. There are a total of 8 available on easy level, 10 points on medium level and 12 points on hard level.
+                        <br>
+                        <br>
+                        Completing the board is the quickest time will earn extra points and if you are fast enough, a place on the illustrious leader board. The timer will begin once you flip your first card. Good Luck!
+                    </p>
                 </div>
             </div>
         </div>
