Add timer section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
         </div>
     </div>
 
+    <div class="container-flud">
+        <div class="row text-center">
+            <div class="col-12">
+                <p class="timer" id="timer">05:00.00</p>
+            </div>
+        </div>
+    </div>
+
     <div class="game-container">
         <div class="row">
             <div class="col-12 col-md-12 col-lg-12 col-xl-12">
@@ -168,7 +176,7 @@
             <p>Enter your name in the box below!</p>
         </div>
         <img class="modal-octocat" src="assets/images/octocat.png" alt="Octocat">
-        <form>
+        <form id="form">
             <div class="row">
                 <div class="col-8 mx-auto text-center">
                     <label>
@@ -178,7 +186,7 @@
             </div>
             <div class="d-grid gap-2 d-md-block mt-5">
                 <button type="button" class="modal-close-button" id="close">close</button>
-                <button type="button" class="modal-replay-button" id="replay">replay</button>
+                <button type="submit" class="modal-replay-button" id="replay">replay</button>
             </div>
         </form>
     </div>
