Add function for timer. Change 'reset' button to trigger stopCountdown and triggers resetGame function through it.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="container-flud">
         <div class="row text-center">
             <div class="col-12">
-                <p class="timer" id="timer">05:00.00</p>
+                <p class="timer" id="timer">05:00</p>
             </div>
         </div>
     </div>
@@ -145,13 +145,13 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-2 offset-sm-3 col-md-2 col-lg-2 text-center">
-                <button type="button" class="btn easy level-selector" id="easy">easy</button>
+                <button type="button" class="btn easy level-selector" id="easy" data-difficulty="easy">easy</button>
             </div>
             <div class="col-sm-3 col-md-3 col-lg-2 text-center">
-                <button type="button" class="btn medium level-selector" id="medium">medium</button>
+                <button type="button" class="btn medium level-selector" id="medium" data-difficulty="medium">medium</button>
             </div>
             <div class="col-sm-1 col-md-1 col-lg-1 text-center">
-                <button type="button" class="btn hard level-selector" id="hard">hard</button>
+                <button type="button" class="btn hard level-selector" id="hard" data-difficulty="hard">hard</button>
             </div>
         </div>
         <div class="row">
