--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
     <!--Footer bar-->
     <footer class="footer">
         <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-12 text-center">
+            <div class="col-sm-12 col-md-12 col-lg-12 text-center" id="footer-title">
                 <p>The Gang's Corner</p>
             </div>
         </div>
-        <div class="row">
+        <div class="row" id="footer-list">
             <ul class="col-sm-12 col-md-12 col-lg-12 text-center collaborator-list">
                 <li class="collaborator">
                     <a href="https://github.com/manni8436" target="_blank">
