--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="leaderboard.html">Leaderboard</a>
