Add game over modal

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
                 <button type="button" class="btn easy level-selector" id="easy" data-difficulty="easy">easy</button>
             </div>
             <div class="col-sm-3 col-md-3 col-lg-2 text-center">
-                <button type="button" class="btn medium level-selector" id="medium" data-difficulty="medium">medium</button>
+                <button type="button" class="btn medium level-selector" id="medium"
+                    data-difficulty="medium">medium</button>
             </div>
             <div class="col-sm-1 col-md-1 col-lg-1 text-center">
                 <button type="button" class="btn hard level-selector" id="hard" data-difficulty="hard">hard</button>
@@ -166,9 +167,9 @@
             </div>
         </div>
     </div>
-
+    <!-- Win Modal -->
     <div class="modal" id="winModal">
-        <div class="congrats">
+        <div class="modal-heading">
             <h3>congratulations!!!</h3>
         </div>
         <div class="speech">
@@ -185,10 +186,26 @@
                 </div>
             </div>
             <div class="d-grid gap-2 d-md-block mt-5">
-                <button type="button" class="modal-close-button" id="close">close</button>
+                <button class="modal-close-button" data-button="close">close</button>
                 <button type="submit" class="modal-replay-button" id="replay">replay</button>
             </div>
         </form>
+    </div>
+
+    <!-- Game Over Modal -->
+    <div class="modal" id="gameoverModal">
+        <div class="modal-heading">
+            <h3>gameover!!!</h3>
+        </div>
+        <div class="speech">
+            <p>Time is up!</p>
+            <p>Would you like to play again?</p>
+        </div>
+        <img class="modal-octocat" src="assets/images/octocat.png" alt="Octocat">
+        <div class="d-grid gap-2 d-md-block mt-5">
+            <button class="modal-close-button" data-button="close">close</button>
+            <button class="modal-replay-button" id="replayBtn">replay</button>
+        </div>
     </div>
 
     <!--Footer bar-->
