style header and footer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarScroll">
-                <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll">
+                <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll" id="navbar-links">
                     <li class="nav-item">
                         <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
@@ -36,7 +36,7 @@
         </nav>
     </header>
 
-    <div class="container">
+    <div class="container" id="instructions-container">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center">
                 <h2 class="game-header">Gang of Eight Presents</h2>
@@ -50,8 +50,6 @@
                     <p>
                         Choose two cards and if the emojis underneath match, you will receive a point. There are a total
                         of 8 available on easy level, 10 points on medium level and 12 points on hard level.
-                        <br>
-                        <br>
                         Completing the board is the quickest time will earn extra points and if you are fast enough, a
                         place on the illustrious leader board. The timer will begin once you flip your first card. Good
                         Luck!
