--- a/index.html
+++ b/index.html
@@ -47,13 +47,16 @@
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center">
                 <div class="instructions">
                     <h4 class="instructions-header">how to play</h4>
-                    <p>
-                        Choose two cards and if the emojis underneath match, you will receive a point. There are a total
-                        of 8 available on easy level, 10 points on medium level and 12 points on hard level.
-                        Completing the board is the quickest time will earn extra points and if you are fast enough, a
-                        place on the illustrious leader board. The timer will begin once you flip your first card. Good
-                        Luck!
-                    </p>
+                    <p>Click any card to reveal it. Reveal a second card to try to find the matching emoji. If the
+                        chosen cards have the same emoji, they will remain revealed, if not then they will become hidden
+                        again. Remember what emoji was underneath!</p>
+                    <p>The game continues until all cards have been matched or the time is up. If you match all cards,
+                        you will receive points depending on the level, moves taken and time remaining.</p>
+                    <p>There are 8 emojis and 5 minutes on the easy level, 10 emojis and 3 minutes on medium and 12
+                        emojis and 1 minute on hard.</p>
+                    <p>If your memory serves you well then you can expect to see your name on the leaderboard!
+                        The timer will begin once you click on your first card.</p>
+                    <p>Good luck!</p>
                 </div>
             </div>
         </div>
