--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/game.css">
     <link rel="stylesheet" href="assets/css/footer.css">
-    <title>Document</title>
+    <title>Emoji Match</title>
 </head>
 
 <body>
@@ -38,13 +38,13 @@
 
     <div class="container" id="instructions-container">
         <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center">
-                <h2 class="game-header">Gang of Eight Presents</h2>
-                <h1> Emoji Match</h1>
+            <div class="col-sm-12 text-center">
+                <h2 class="game-header">Gang of Seven Presents</h2>
+                <h1>Emoji Match</h1>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center">
+            <div class="col-sm-12 text-center">
                 <div class="instructions">
                     <h4 class="instructions-header">how to play</h4>
                     <p>Click any card to reveal it. Reveal a second card to try to find the matching emoji. If the
