--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="#">
-    <meta name="keywords" content="#">
+    <meta name="description" content="A website hosting an emoji themed memory game with different difficulty modes.">
+    <meta name="keywords" content="Hackathon, World emoji day, Memory game">
+    <meta name="author"
+        content="Emanuel Silva, Barry Marples, Sejung Kwak, Hrafn Már, Farrukh Ahmed, Barry Greaves, Matej Lazar">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/game.css">
     <link rel="stylesheet" href="assets/css/footer.css">
-    <title>Document</title>
+    <title>Emoji Match | Home</title>
 </head>
 
 <body>
@@ -40,7 +42,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center">
                 <h2 class="game-header">Gang of Eight Presents</h2>
-                <h1> Emoji Match</h1>
+                <h1>Emoji Match</h1>
             </div>
         </div>
         <div class="row">
@@ -338,7 +340,6 @@
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous">
     </script>
     <!-- Custom JS Scripts -->
-    <script src="assets/js/script.js"></script>
     <script src="assets/js/game.js"></script>
 
 </body>
