--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,44 +5,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A website hosting an emoji themed memory game with different difficulty modes.">
+    <meta name="keywords" content="Hackathon, World emoji day, Memory game">
+    <meta name="author"
+        content="Emanuel Silva, Barry Marples, Sejung Kwak, Hrafn Már, Farrukh Ahmed, Barry Greaves, Matej Lazar">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/game.css">
     <link rel="stylesheet" href="assets/css/footer.css">
-    <link rel="stylesheet" href="assets/css/leaderboard.css"
-
-    <!--  Styling to be moved into the CSS file -->
-    <style>
-        th {
-            color: #fff;
-        }
-    </style>
-    <title>Leaderboard</title>
+    <link rel="stylesheet" href="assets/css/leaderboard.css">
+    <title>Emoji Match | Leaderboard</title>
 </head>
 
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="index.html">World Emoji Day</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll"
-            aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarScroll">
-            <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll" id="navbar-links">
-                <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="leaderboard.html">Leaderboard</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</header>
-
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="index.html">World Emoji Day</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll"
+                aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll" id="navbar-links">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="leaderboard.html">Leaderboard</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
     <table class="table table-striped">
         <tr class="bg-info">
@@ -173,7 +169,7 @@
                     </li>
                 </ul>
             </div>
-       </div>
+        </div>
     </footer>
 
     <!-- Bootstrap CDN -->
@@ -188,7 +184,6 @@
     </script>
     <!-- Custom JS Scripts -->
     <script src="assets/js/leaderboard.js"></script>
-    <script src="assets/js/script.js"></script>
     <script src="assets/js/game.js"></script>
 
 </body>
