--- a/index.html
+++ b/index.html
@@ -47,19 +47,14 @@
         </div>
         <div class="row">
             <div class="col-sm-12 text-center">
-                <div class="instructions">
-                    <h4 class="instructions-header">how to play</h4>
-                    <p>Click any card to reveal it. Reveal a second card to try to find the matching emoji. If the
-                        chosen cards have the same emoji, they will remain revealed, if not then they will become hidden
-                        again. Remember what emoji was underneath!</p>
-                    <p>The game continues until all cards have been matched or the time is up. If you match all cards,
-                        you will receive points depending on the level, moves taken and time remaining.</p>
-                    <p>There are 8 emojis and 5 minutes on the easy level, 10 emojis and 3 minutes on medium and 12
-                        emojis and 1 minute on hard.</p>
-                    <p>If your memory serves you well then you can expect to see your name on the leaderboard!
-                        The timer will begin once you click on your first card.</p>
+                <details class="instructions">
+                    <summary class="instructions-header">how to play</summary>
+                    <p>Click any card to reveal it. Reveal a second card to try to find the matching emoji.</p>
+                    <p>The timer will begin once you click on your first card.</p>
+                    <p>The game continues until all cards have been matched or the time is up. If you match all
+                        cards, you will receive points depending on the level, moves taken and time remaining.</p>
                     <p>Good luck!</p>
-                </div>
+                </details>
             </div>
         </div>
     </div>
