change button to save score

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             </div>
             <div class="d-grid gap-2 d-md-block mt-5">
                 <button class="modal-close-button" data-button="close">close</button>
-                <button type="submit" class="modal-replay-button" id="replay">replay</button>
+                <button type="submit" class="modal-replay-button" id="replay">Save Score</button>
             </div>
         </form>
     </div>
