--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A website hosting an emoji themed memory game with different difficulty modes.">
     <meta name="keywords" content="Hackathon, World emoji day, Memory game">
-    <meta name="author"
-        content="Emanuel Silva, Barry Marples, Sejung Kwak, Hrafn Már, Farrukh Ahmed, Barry Greaves, Matej Lazar">
+    <meta name="author" content="Emanuel Silva, Barry Marples, Sejung Kwak, Hrafn Már, Farrukh Ahmed, Barry Greaves, Matej Lazar">
+    <script src="https://kit.fontawesome.com/ce58c24f18.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/game.css">
@@ -206,14 +206,15 @@
         </div>
     </div>
 
-    <!--Footer bar-->
-    <footer class="footer">
+ <!--Footer bar-->
+ <footer class="footer">
+    <div class="footer-container">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 text-center" id="footer-title">
                 <p>The Gang's Corner</p>
             </div>
         </div>
-        <div class="row" id="footer-list">
+        <div class="row">
             <ul class="col-sm-12 col-md-12 col-lg-12 text-center collaborator-list">
                 <li class="collaborator">
                     <a href="https://github.com/manni8436" target="_blank">
@@ -322,7 +323,11 @@
                 </li>
             </ul>
         </div>
-    </footer>
+    </div>
+</footer>
+   
+    
+     
 
     <!-- Bootstrap CDN -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
