add link from leaderboard

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -66,6 +66,17 @@
                 </div>
             </div>
         </div>
+
+      <!--Footer bar-->
+        <div class="container">
+            <div class="row">
+                <div class="col text-center">
+                        <a class="btn" href="index.html" role="button">Play Again?</a>    
+                </div>
+            </div>
+        </div>
+
+
     </div>
 
     <!--Footer bar-->
