--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
     </div>
 
-    <div class="container-flud">
+    <div class="container-fluid">
         <div class="row text-center">
             <div class="col-12">
                 <p class="timer" id="timer">05:00</p>
